fix overscroll on ios

--- a/src/assets/css/main.css
+++ b/src/assets/css/main.css
@@ -7,6 +7,7 @@
   body {
     height: 100%;
     min-height: 100%;
+    overscroll-behavior-y: none;
     font-family:
       -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, 'Helvetica Neue', Arial, sans-serif;
     -webkit-font-smoothing: antialiased;
